--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -31,12 +31,12 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
             <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/mission_statement_main_sc"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_mission"
                 android:adjustViewBounds="true"
-                android:padding="6dp"
-                android:layout_marginRight="6dp"
+
                 />
             <ImageView
                 android:layout_width="match_parent"
@@ -59,12 +59,12 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
             <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/form_main_sc_button"
-                android:padding="6dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:background="@drawable/ic_form"
+                android:layout_gravity="center"
                 android:adjustViewBounds="true"
-                android:layout_marginLeft="6dp" />
+                />
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -94,12 +94,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
             <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/external_links_main_scr"
-                android:adjustViewBounds="true"
-                android:padding="6dp"
-                android:layout_marginRight="6dp"/>
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_external_links"
+                android:adjustViewBounds="true"/>
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -122,13 +121,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
             <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/info_button_main_scr"
-                android:padding="6dp"
-                android:adjustViewBounds="true"
-                android:layout_marginLeft="6dp"
-                />
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_about"
+                android:adjustViewBounds="true"/>
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -137,12 +134,12 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
-                android:onClick="onAboutClick"
                 android:text="About"
                 android:gravity="bottom|center"
                 android:background="@color/transparent"
                 android:id="@+id/about_button"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginBottom="8dp"
+                android:onClick="onAboutClick"/>
         </FrameLayout>
     </LinearLayout>
 
