--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<ScrollView
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="ie.iprt.spentconvictioncalculator.FormActivity"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
-        xmlns:tools="http://schemas.android.com/tools"
-        tools:context="ie.iprt.spentconvictioncalculator.FormActivity"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,18 +31,18 @@
         <TextView
             android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="15dp"
+            android:textSize="20dp"
 
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-
+            android:layout_marginBottom="40dp"
             android:id="@+id/resultsTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <LinearLayout
 
-
+            android:layout_gravity="bottom"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -59,3 +63,4 @@
 
 
     </LinearLayout>
+</ScrollView>
