--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -27,16 +27,16 @@
         android:layout_marginBottom="10dp"
         >
         <FrameLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
             <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="20dp"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_mission"
+                android:src="@drawable/ic_mission"
                 android:adjustViewBounds="true"
-
                 />
             <ImageView
                 android:layout_width="match_parent"
@@ -52,16 +52,17 @@
                 android:gravity="bottom|center"
                 android:background="@color/transparent"
                 android:id="@+id/mission_statement"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginBottom="10dp"/>
         </FrameLayout>
         <FrameLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
             <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:background="@drawable/ic_form"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="20dp"
+                android:src="@drawable/ic_form"
                 android:layout_gravity="center"
                 android:adjustViewBounds="true"
                 />
@@ -78,7 +79,7 @@
                 android:text="Form"
                 android:gravity="bottom|center"
                 android:background="@color/transparent"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginBottom="10dp"/>
         </FrameLayout>
     </LinearLayout>
     <!--Second Line-->
@@ -90,14 +91,15 @@
          android:layout_marginBottom="10dp"
         >
         <FrameLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
             <ImageView
-                android:layout_width="130dp"
-                android:layout_height="130dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="20dp"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_external_links"
+                android:src="@drawable/ic_external_links"
                 android:adjustViewBounds="true"/>
             <ImageView
                 android:layout_width="match_parent"
@@ -112,19 +114,20 @@
                 android:gravity="bottom|center"
                 android:background="@color/transparent"
                 android:id="@+id/external_links"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="10dp"
                 android:onClick="onExternalLinksActivity"
                 />
         </FrameLayout>
         <FrameLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
             <ImageView
-                android:layout_width="130dp"
-                android:layout_height="130dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="20dp"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_about"
+                android:src="@drawable/ic_about"
                 android:adjustViewBounds="true"/>
             <ImageView
                 android:layout_width="match_parent"
@@ -138,7 +141,7 @@
                 android:gravity="bottom|center"
                 android:background="@color/transparent"
                 android:id="@+id/about_button"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="10dp"
                 android:onClick="onAboutClick"/>
         </FrameLayout>
     </LinearLayout>
