--- a/app/src/main/res/layout-land/activity_home_screen.xml
+++ b/app/src/main/res/layout-land/activity_home_screen.xml
@@ -40,7 +40,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
                     android:onClick="onMissionStatementClick"
-                    android:text="Mission Statement"
+                    android:text="@string/mission_statement_main_scr"
                     android:gravity="bottom|center"
                     android:background="@color/transparent"
                     android:id="@+id/mission_statement"
@@ -69,7 +69,7 @@
                     android:layout_height="fill_parent"
                     android:onClick="onViewButtonClicked"
                     android:id="@+id/form_button_main"
-                    android:text="Form"
+                    android:text="@string/form_main_scr"
                     android:gravity="bottom|center"
                     android:background="@color/transparent"
                     android:layout_marginBottom="15dp"/>
@@ -95,7 +95,7 @@
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
-                    android:text="External Links"
+                    android:text="@string/external_links_main_scr"
                     android:gravity="bottom|center"
                     android:background="@color/transparent"
                     android:id="@+id/external_links"
@@ -123,7 +123,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
                     android:onClick="onAboutClick"
-                    android:text="About"
+                    android:text="@string/about_manin_scr"
                     android:gravity="bottom|center"
                     android:background="@color/transparent"
                     android:id="@+id/about_button"
