--- a/app/src/main/res/layout/activity_external_links.xml
+++ b/app/src/main/res/layout/activity_external_links.xml
@@ -5,27 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="0dp"
-        android:paddingRight="0dp"
-        android:paddingTop="0dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
         android:orientation="vertical"
         android:background="@color/white"
 
 
         tools:context="ie.iskill.collaborationexample.eric.EricActivity">
-
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:background="@drawable/iprt_white_logo"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_height="wrap_content"
+            android:src="@drawable/home_screen_main_logo"
+            android:adjustViewBounds="true"
+            android:paddingTop="15dp"
+            android:paddingBottom="25dp"
+            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
