--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView
+    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="ie.iprt.spentconvictioncalculator.FormActivity"
     xmlns:android="http://schemas.android.com/apk/res/android"
