--- a/app/src/main/res/layout-land/activity_about.xml
+++ b/app/src/main/res/layout-land/activity_about.xml
@@ -20,7 +20,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="220dp"
-            android:background="@drawable/iprt_white_logo_land"
+            android:src="@drawable/iprt_white_logo_land"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"/>
@@ -28,12 +28,11 @@
         <TextView
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="About: "
+            android:text="@string/about_iprt"
             android:textColor="@color/black"
             android:textStyle="bold|italic"
             android:textSize="16dp"/>
@@ -43,7 +42,8 @@
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/information_main"
+                android:src="@drawable/ic_about"
+                android:alpha="0.6"
                 android:layout_marginRight="10dp"
                 />
             <TextView
@@ -53,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:text="The Irish Penal Reform Trust (IPRT) is Ireland's leading non-governmental organisation campaigning for the rights of people in prison and the progressive reform of Irish penal policy. \n\nEstablished in 1994, IPRT has a well-established role as an independent voice in public debate on the Irish penal system."/>
+                android:text="@string/about_land_one"/>
         </LinearLayout>
 
 
@@ -65,7 +65,7 @@
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="IPRT is committed to reducing imprisonment, respecting the rights of everyone in the penal system, and progressive reform of the penal system based on evidence-led policies. In operational terms this means our focus is on: the use of imprisonment, including sentencing; alternatives to custody and diversion; and the treatment of those in detention."/>
+            android:text="@string/about_land_two"/>
 
         <TextView
             android:layout_marginBottom="10dp"
@@ -74,7 +74,7 @@
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="We publish a wide range of policy positions and research documents; we campaign vigorously across a wide range of penal policy issues; and we are committed to working with other agencies in the criminal justice system to achieve penal reform."/>
+            android:text="@string/about_land_three"/>
 
         <TextView
             android:layout_marginBottom="10dp"
@@ -83,13 +83,155 @@
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="We believe that penal reform is necessary, urgent and achievable."/>
+            android:text="@string/about_land_four"/>
+
+        <TextView
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:textStyle="bold|italic"
+            android:textSize="16dp"
+            android:text="@string/about_developers"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginBottom="20dp"
+            android:textColor="@color/black"
+            android:text="@string/app_written_by"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="200dp">
+            <TextView
+                android:textSize="16dp"
+                android:textColor="@color/black"
+                android:layout_marginRight="80dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Credits:"/>
+            <TextView
+                android:textColor="@color/black"
+                android:text="Adam King"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginLeft="200dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="16dp"
+                android:textColor="@color/white"
+                android:layout_marginRight="80dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/credits_string"/>
+            <TextView
+                android:textColor="@color/black"
+                android:text="@string/christina_name"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginLeft="200dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="16dp"
+                android:textColor="@color/white"
+                android:layout_marginRight="80dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/credits_string"/>
+            <TextView
+                android:textColor="@color/black"
+                android:text="@string/eric_name"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginLeft="200dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="16dp"
+                android:textColor="@color/white"
+                android:layout_marginRight="80dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/credits_string"/>
+            <TextView
+                android:textColor="@color/black"
+                android:text="@string/gerard_name"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginLeft="200dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="16dp"
+                android:textColor="@color/white"
+                android:layout_marginRight="80dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/credits_string"/>
+            <TextView
+                android:textColor="@color/black"
+                android:text="@string/josh_name"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginLeft="200dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="16dp"
+                android:textColor="@color/white"
+                android:layout_marginRight="80dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/credits_string"/>
+            <TextView
+                android:textColor="@color/black"
+                android:text="@string/tomas_name"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
         <Button
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:text="Donate to IPRT"
+            android:text="@string/donate_button"
             android:layout_marginBottom="15dp"
             android:background="@drawable/button_red_square"
             android:textColor="@color/white"
@@ -100,8 +242,7 @@
             android:layout_marginLeft="10dp"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:text="iSkill"
-
+            android:text="@string/iskill_button"
             android:background="@drawable/button_red_square"
             android:textColor="@color/white"
             android:onClick="onIskillClick"/>
