--- a/app/src/main/res/layout-land/activity_about.xml
+++ b/app/src/main/res/layout-land/activity_about.xml
@@ -19,11 +19,10 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:background="@drawable/iprt_white_logo_land"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_height="wrap_content"
+            android:src="@drawable/landscape_main_logo_dimention"
+            android:adjustViewBounds="true"
+            />
 
         <TextView
             android:paddingLeft="10dp"
