--- a/app/src/main/res/layout/activity_mission_statement.xml
+++ b/app/src/main/res/layout/activity_mission_statement.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
     <ScrollView
+    android:background="@color/white"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+
     android:layout_width="match_parent">
 
 <LinearLayout
@@ -12,9 +13,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="16dp"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="0dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp"
     android:background="@color/white"
     tools:context="ie.iprt.spentconvictioncalculator.MissionStatementActivity">
 
@@ -28,6 +29,10 @@
         />
 
     <TextView
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_gravity="center"
+
         android:text="@string/mission_statement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
