--- a/app/src/main/res/layout-land/activity_home_screen.xml
+++ b/app/src/main/res/layout-land/activity_home_screen.xml
@@ -99,7 +99,8 @@
                     android:gravity="bottom|center"
                     android:background="@color/transparent"
                     android:id="@+id/external_links"
-                    android:layout_marginBottom="15dp"/>
+                    android:layout_marginBottom="15dp"
+                    android:onClick="onExternalLinksActivity"/>
             </FrameLayout>
             <FrameLayout
                 android:layout_width="match_parent"
