added instuctions preview

--- a/app/src/main/res/layout/activity_mission_statement.xml
+++ b/app/src/main/res/layout/activity_mission_statement.xml
@@ -28,6 +28,12 @@
         android:paddingTop="15dp"
         android:paddingBottom="25dp"
         />
+    <TextView
+        android:textSize="60dp"
+        android:text="@string/instructions_title"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
