--- a/app/src/main/res/layout/activity_mission_statement.xml
+++ b/app/src/main/res/layout/activity_mission_statement.xml
@@ -29,9 +29,11 @@
         android:paddingBottom="25dp"
         />
     <TextView
-        android:textSize="60dp"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:id="@+id/instructions_header"
         android:text="@string/instructions_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <LinearLayout
