--- a/app/src/main/res/layout-land/activity_about.xml
+++ b/app/src/main/res/layout-land/activity_about.xml
@@ -20,10 +20,9 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="220dp"
-            android:src="@drawable/iprt_white_logo_land"
+            android:src="@drawable/landscape_main_logo_dimention"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginRight="10dp" />
 
         <TextView
             android:paddingLeft="10dp"
@@ -108,7 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:layout_marginLeft="200dp">
+            android:layout_marginLeft="180dp">
             <TextView
                 android:textSize="16dp"
                 android:textColor="@color/black"
@@ -116,7 +115,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Credits:"/>
+                android:text="@string/credits_string"/>
             <TextView
                 android:textColor="@color/black"
                 android:text="Adam King"
@@ -126,7 +125,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginLeft="200dp"
+            android:layout_marginLeft="180dp"
             android:layout_marginBottom="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -146,7 +145,7 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <LinearLayout
-            android:layout_marginLeft="200dp"
+            android:layout_marginLeft="180dp"
             android:layout_marginBottom="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -166,7 +165,7 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <LinearLayout
-            android:layout_marginLeft="200dp"
+            android:layout_marginLeft="180dp"
             android:layout_marginBottom="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -186,7 +185,7 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <LinearLayout
-            android:layout_marginLeft="200dp"
+            android:layout_marginLeft="180dp"
             android:layout_marginBottom="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -206,7 +205,7 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <LinearLayout
-            android:layout_marginLeft="200dp"
+            android:layout_marginLeft="180dp"
             android:layout_marginBottom="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -225,6 +224,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
+
+        <TextView
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:textStyle="bold|italic"
+            android:textSize="16dp"
+            android:text="@string/about_iskill"/>
+
+        <TextView
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/iskill_description"/>
 
         <Button
             android:layout_marginLeft="10dp"
