Eric; fixed mailto, color, image(jpeg) and some smaller changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="red">#DC2200</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="cream">#fdffd9</color>
+    <color name="cream">#d1d1d1</color>
     <color name="transparent">#0000</color>
+    <color name="grey">#fafafa</color>
 </resources>
