--- a/app/src/main/res/layout/activity_external_links.xml
+++ b/app/src/main/res/layout/activity_external_links.xml
@@ -37,7 +37,7 @@
             android:layout_height="2dp"
             android:background="#000000" />
         <LinearLayout
-            android:background="@color/cream"
+            android:background="@color/grey"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/charity1"
                 android:textColor="@color/black"
-                android:gravity="center"
+                android:gravity="right"
                 android:textSize="20dp"
                 android:id="@+id/link1"/>
 
@@ -128,7 +128,7 @@
 
 
         <LinearLayout
-            android:background="@color/cream"
+            android:background="@color/grey"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -150,7 +150,7 @@
                 <ImageView
                     android:layout_width="150px"
                     android:layout_height="150px"
-                    android:src="@drawable/ucasedh"
+                    android:src="@drawable/ucasedh1"
                     android:onClick="oncharity2Click"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
@@ -170,7 +170,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/charity2"
                         android:textColor="@color/black"
-                        android:gravity="center"
+                        android:gravity="right"
                         android:textSize="20dp"/>
 
                     <TextView
@@ -216,7 +216,7 @@
             android:background="#000000" />
 
         <LinearLayout
-            android:background="@color/cream"
+            android:background="@color/grey"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -258,7 +258,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/charity3"
                         android:textColor="@color/black"
-                        android:gravity="center"
+                        android:gravity="right"
                         android:textSize="15dp"/>
 
                     <TextView
@@ -306,7 +306,7 @@
             android:background="#000000" />
 
         <LinearLayout
-            android:background="@color/cream"
+            android:background="@color/grey"
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -348,8 +348,8 @@
                         android:layout_height="wrap_content"
                         android:text="@string/charity4"
                         android:textColor="@color/black"
-                        android:gravity="center"
-                        android:textSize="19dp"/>
+                        android:gravity="right"
+                        android:textSize="20dp"/>
 
                     <TextView
 
@@ -388,22 +388,6 @@
             >
 
         </LinearLayout>
-
-
-
-        <Button
-            android:layout_marginTop="0dp"
-            android:onClick="onMainReturn"
-
-            android:text="Return to main"
-
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-
-            android:layout_marginBottom="0dp"
-            android:background="@drawable/button_red_square"
-            android:textColor="@color/white"
-            />
 
 
 
