--- a/app/src/main/res/layout/activity_mission_statement.xml
+++ b/app/src/main/res/layout/activity_mission_statement.xml
@@ -20,6 +20,7 @@
     android:paddingTop="10dp"
     android:orientation="vertical"
     android:backgroundTint="@color/white"
+    android:layout_marginBottom="10dp"
     tools:context="ie.iprt.spentconvictioncalculator.AboutActivity">
     <ImageView
         android:layout_width="match_parent"
