--- a/app/src/main/res/layout/activity_mission_statement.xml
+++ b/app/src/main/res/layout/activity_mission_statement.xml
@@ -37,6 +37,13 @@
         android:text="@string/instructions_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:background="#000000" />
+
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -55,7 +62,17 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:text="@string/form_instructions_page_button"/>
+
     </LinearLayout>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:background="#000000" />
+
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -75,6 +92,14 @@
             android:text="@string/external_links_instructions_page_button"/>
     </LinearLayout>
 
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:background="#000000" />
+
+
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
@@ -93,6 +118,14 @@
             android:textColor="@color/black"
             android:text="@string/about_instructions_page_button"/>
     </LinearLayout>
+
+
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:background="#000000" />
+
 
 </LinearLayout>
     </ScrollView>
