--- a/app/src/main/res/layout-land/activity_mission_statement.xml
+++ b/app/src/main/res/layout-land/activity_mission_statement.xml
@@ -28,6 +28,24 @@
             android:paddingTop="15dp"
             android:paddingBottom="25dp"
             />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#000000" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            >
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#000000" />
+
         <TextView
             android:gravity="center"
             android:textSize="30sp"
@@ -54,6 +72,24 @@
                 android:textColor="@color/black"
                 android:text="@string/form_instructions_page_button"/>
         </LinearLayout>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#000000" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            >
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#000000" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -72,6 +108,23 @@
                 android:textColor="@color/black"
                 android:text="@string/external_links_instructions_page_button"/>
         </LinearLayout>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#000000" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            >
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#000000" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -91,6 +144,23 @@
                 android:textColor="@color/black"
                 android:text="@string/about_instructions_page_button"/>
         </LinearLayout>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#000000" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            >
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#000000" />
 
     </LinearLayout>
 </ScrollView>
