fixed the logo on the about pages so it matches the others in horizontal view, mad a few small changes to punctation and wording on the strings nothing big, change the button to say calculate instead of submit

--- a/app/src/main/res/layout-land/activity_form.xml
+++ b/app/src/main/res/layout-land/activity_form.xml
@@ -144,7 +144,7 @@
             android:onClick="onSubmitButtonClicked"
             android:background="@drawable/button_red_square"
             android:textColor="@color/white"
-            android:text="@string/submit"
+            android:text="@string/calculate"
             />
 
 
