--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -146,7 +146,7 @@
             android:onClick="onSubmitButtonClicked"
             android:background="@drawable/button_red_square"
             android:textColor="@color/white"
-            android:text="@string/submit"
+            android:text="@string/calculate"
           />
 
 
