Changed padding in landcape mode

--- a/app/src/main/res/layout/activity_mission_statement.xml
+++ b/app/src/main/res/layout/activity_mission_statement.xml
@@ -4,7 +4,9 @@
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
-   To:-->
+   To:
+
+   and added padding to first text view-->
     <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -40,7 +42,8 @@
         android:id="@+id/instructions_header"
         android:text="@string/instructions_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingBottom="15dp"/>
     <View
         android:layout_width="fill_parent"
         android:layout_height="2dp"
