--- a/app/src/main/res/layout-land/activity_mission_statement.xml
+++ b/app/src/main/res/layout-land/activity_mission_statement.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<!--Tomas:Took out top padding in image view and linear layout in order to make the logos consistant accross the landscape-->
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,7 +15,6 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingTop="10dp"
         android:orientation="vertical"
         android:backgroundTint="@color/white"
         tools:context="ie.iprt.spentconvictioncalculator.AboutActivity">
@@ -24,7 +23,6 @@
             android:layout_height="wrap_content"
             android:src="@drawable/landscape_main_logo_dimention"
             android:adjustViewBounds="true"
-            android:paddingTop="15dp"
             android:paddingBottom="25dp"
             />
         <View
