Changed logo of "How to Use", and top color scheeme-logo red

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="cream">#d1d1d1</color>
     <color name="transparent">#0000</color>
     <color name="grey">#fafafa</color>
+    <color name="logo_red">#822133</color>
 </resources>
