--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,11 @@
 <resources>
 
     <!-- Base application theme. -->
-    <!--Tomas: changed Dark action bar to No Action bar-->
+    <!--Tomas: changed Dark action bar to No Action bar, and color primary Dark-->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/logo_red</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
