--- a/app/src/main/res/layout/activity_mission_statement.xml
+++ b/app/src/main/res/layout/activity_mission_statement.xml
@@ -67,8 +67,9 @@
         android:paddingTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+            android:textSize="13dp"
         android:textColor="@color/black"
-        android:text="@string/form_instructions_page_button"/>
+        android:text="@string/form_instructions_page_button" />
 
     </LinearLayout>
 
@@ -96,6 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
+            android:textSize="13dp"
             android:text="@string/external_links_instructions_page_button"/>
     </LinearLayout>
 
@@ -122,6 +124,7 @@
             android:paddingTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="13dp"
             android:textColor="@color/black"
             android:text="@string/about_instructions_page_button"/>
     </LinearLayout>
